# FastAPI-DDD-Kafka-chat

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  READMY.md  pyproject.toml
app/application/api/: main.py
app/application/api/messages/: __init__.py  router.py  schemas.py
app/domain/entities/: messages.py
app/domain/exceptions/: messages.py
app/domain/values/: messages.py
app/infra/kafka/: config.py  producer.py
app/infra/repositories/: messages.py
app/logic/: init.py  mediator.py
app/logic/commands/: messages.py
app/logic/events/: base.py  messages.py
app/logic/exceptions/: messages.py
docker_compose/: app.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
tests/: conftest.py
tests/api/: test_chats_api.py
tests/unit/: test_chat_entities.py  test_message_values.py
