[tool.poetry]
name = "fastapi-chat"
version = "0.1.0"
description = ""
authors = ["rokotsu <garretdejl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
motor = "^3.5.0"
uvicorn = {extras = ["all"], version = "^0.30.1"}
ipython = "^8.26.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
